src/assets/css/shame.css
/* ==========================================================================
   Shameful CSS
   ========================================================================== */

/**
 * Put shameful CSS in here. Refactor later.
 * http://csswizardry.com/2013/04/shame-css/
 */

/**
 * Use the CSS Wizardry hack namespace
 * eg ._footer-mobile {}
 * https://csswizardry.com/2015/03/more-transparent-ui-code-with-namespaces/#hack-namespaces-_
 */

/* list-bare.css example of CSS object in /src/modules/objects/, header.hbs and footer.hbs */

/**
 * Temporary styling for layout 
 * Putting it in shame.css makes it easier for you to implement your own components and objects
 * 😄
 */

.wrapper {
  padding: 1.5rem;
}

.wrapper > * {
  margin: 0 auto;
  max-width: 44rem;
}

.header,
.footer {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.header {
  padding-top: 1rem;
}

.header img {
  margin: 1rem 0;
}

.header img:hover {
  opacity: 0.7;
}

/* Header and footer visited links stay link color */
.header a:visited,
.footer a:visited {
  color: var(--blue);
}
/* Header and footer links still have hover color */
.header a:hover,
.header a:focus,
.header a:active,
.footer a:hover,
.footer a:focus,
.footer a:active {
  color: var(--blueviolet);
}

/* o-list-bare centered (both ways) inline list using flexbox */
.o-list-bare {
  align-items: center; /* Secondary axis alignment */
  display: flex;
  height: 100%; /* To fill container vertically */
  justify-content: center;
  padding: 0.5rem 0; /* temp padding */
}

.o-list-bare > * {
  margin: 0 1rem;
}

